--- a/.verb.md
+++ b/.verb.md
@@ -1,11 +1,7 @@
----
-tags: ['verb-tag-jscomments']
----
-# {%= name %} {%= badge("fury") %}
+# {%= name %} {%= badge("fury") %} {%= badge("travis") %}
 
 > {%= description %}
 
-## Install
 {%= include("install-npm", {save: true}) %}
 
 ## Usage
@@ -15,7 +11,7 @@ var verbalize = require('{%= name %}');
 ```
 
 ## API
-{%= jscomments("index.js") %}
+{%= apidocs("index.js") %}
 
 ## Author
 {%= include("author") %}
