--- a/.verb.md
+++ b/.verb.md
@@ -13,6 +13,12 @@ var verbalize = require('{%= name %}');
 ## API
 {%= apidocs("index.js") %}
 
+## Running tests
+{%= include("tests") %}
+
+## Contributing
+{%= include("contributing") %}
+
 ## Author
 {%= include("author") %}
 
