--- a/.verb.md
+++ b/.verb.md
@@ -2,6 +2,8 @@
 
 > {%= description %}
 
+## Install
+
 {%= include("install-npm", {save: true}) %}
 
 ## Usage
@@ -24,10 +26,10 @@ var verbalize = require('{%= name %}');
 
 ## License
 {%= copyright() %}
-{%= license() %}
+{%= license %}
 
 ***
 
 {%= include("footer") %}
 
-{%= reflinks(['strip-ansi']) %}
+{%= reflinks(verb.reflinks) %}
