--- a/.verb.md
+++ b/.verb.md
@@ -1,35 +1,8 @@
-# {%= name %} {%= badge("fury") %} {%= badge("travis") %}
-
-> {%= description %}
-
-## Install
-
-{%= include("install-npm", {save: true}) %}
-
 ## Usage
 
 ```js
-var verbalize = require('{%= name %}');
+var Verbalize = require('{%= name %}');
 ```
 
 ## API
 {%= apidocs("index.js") %}
-
-## Running tests
-{%= include("tests") %}
-
-## Contributing
-{%= include("contributing") %}
-
-## Author
-{%= include("author") %}
-
-## License
-{%= copyright() %}
-{%= license %}
-
-***
-
-{%= include("footer") %}
-
-{%= reflinks(verb.reflinks) %}
